--- a/main.css
+++ b/main.css
@@ -7,32 +7,30 @@ body {
 .content {
     display: -webkit-flex;
     display: flex;
-
+    flex-flow: row wrap;
 }
 
-.nav {
+.nav, .main{
     text-align: center;
-}
-
-.content > * {
-  padding: 10px;
-  flex: 1 100%;
+    flex: 1 100%;
 }
 
 
 /*big screens. todo: DPI independency?*/
 @media all and (min-width: 800px) {
-    .main {
-        text-align: left;
-        flex: 2;
+    .content > * {
+        padding: 10px;
     }
     .nav {
         text-align: right;
         flex: 1;
+        order: 1;
     }
-
-    .nav { order: 1; }
-    .main { order: 2;  }
+    .main {
+        text-align: left;
+        flex: 2;
+        order: 2;
+    }
 }
 /*styling*/
 ul {
