--- a/main.css
+++ b/main.css
@@ -32,12 +32,15 @@ body {
         order: 2;
     }
 }
-/*styling*/
+
 ul {
     list-style-type: none;
     padding: 0;
     margin-bottom: 5px;
-}
-a {
     display: block;
+}
+
+iframe {
+    width: 100%;
+    height: 100%;
 }
