--- a/main.css
+++ b/main.css
@@ -17,7 +17,7 @@ body {
 }
 
 /*big screens. todo: DPI independency?*/
-@media all and (min-width: 800px) {
+@media all and (min-width: 1000px) {
     .content > * {
         padding: 10px;
     }
@@ -53,4 +53,14 @@ body {
 iframe {
     width: 100%;
     height: 100%;
+}
+
+header {
+    text-align: center;
+    font-size: 200%
+}
+
+p {
+    display: block;
+    max-width: 1000px;
 }
